c/examples/writing-a-c-compiler-tests/tests/chapter_13/valid/libraries/extern_double_client.c
/* Test linking against a double defined in another file */
extern double d;

int main(void) {
    return d == 1e20;
}