c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/extra_credit/bitwise_and.c
int main(void) {
    /* It's illegal to apply bitwise & to doubles */
    double d = 10.0 & -1;
    return 0;
}